Fixed the distortion of background in mobile.

--- a/src/Components/BackgroundProp/Background.css
+++ b/src/Components/BackgroundProp/Background.css
@@ -1,10 +1,18 @@
 .background-image{
-    background-color: #f5f5f5;
     height: 100%;
     width: 100%;
     position: absolute;
     top: 0;
     left: 0;
     z-index: -1;
+    object-fit: cover;
+
   }
 
+  @media (max-width: 767px) {
+    /*Image shouldn't look stretched on mobile*/
+    .background-image {
+      object-fit: cover;
+    }
+    
+  }
